add profile post type filters and pinned posts

--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,13 @@ object.attachment {
     height: auto;
 } */
 
+#viewOptions {
+    margin-top: 1em;
+}
+
+#viewOptions>label {
+    margin-right: 0.5em;
+}
 
 #newBtn,
 #olderBtn {
