--- a/src/style.css
+++ b/src/style.css
@@ -94,8 +94,10 @@ a.subdued {
 
 .status {
     padding: .25em .5em;
-    margin-block: .5em;
-    margin-inline: .1em;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-left: .1em;
+    margin-right: .1em;
     cursor: pointer;
 }
 
@@ -117,7 +119,8 @@ a.subdued {
 
 .xtraDetails {
     font-size: .8em;
-    margin-block: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     margin-left: .1em;
 }
 
@@ -280,6 +283,19 @@ button {
     font-size: 1em;
 }
 
+#headerOverlay {
+    /* For IE9 and earlier */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#40000000', endColorstr='#BF000000', GradientType=0);
+
+    /* For older browsers */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.25)), color-stop(100%, rgba(0,0,0,0.75))); /* Safari 5.1 - 6.0 */
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75)); /* Safari 6.1+, Chrome 26+ */
+    background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75)); /* Firefox 3.6 - 15 */
+    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75)); /* Opera 11.1 - 12.0 */
+    background-image: -ms-linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75)); /* IE10 */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75)); /* Standard syntax */
+}
+
 .emote {
     min-width: 1.1em;
     height: 1.1em;
@@ -292,6 +308,8 @@ button {
     user-select: none;
     cursor: default;
     transition: width 0.1s, height 0.1s, top 0.1s;
+    -webkit-transition: width 0.1s, height 0.1s, top 0.1s;
+    -moz-transition: width 0.1s, height 0.1s, top 0.1s;
 }
 
 .emote:hover {
@@ -299,6 +317,8 @@ button {
     height: 1.5em;
     top: 0.1em;
     transition: width 0.1s, height 0.1s, top 0.1s;
+    -webkit-transition: width 0.1s, height 0.1s, top 0.1s;
+    -moz-transition: width 0.1s, height 0.1s, top 0.1s;
 }
 
 .picker-grid .emote {
@@ -399,7 +419,8 @@ button {
 
 .notificationItem {
     padding: 0.5em;
-    margin-block: 0.8em;
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
     border-radius: 0.25em;
     -moz-border-radius: 0.25em;
     -webkit-border-radius: 0.25em;
@@ -410,7 +431,8 @@ button {
 }
 
 #bio {
-    margin-block: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 #sacrifice,
