--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,6 @@
 }
 
 body,
-button,
 caption,
 dd,
 div,
@@ -230,6 +229,7 @@ object.attachment {
     margin-right: 0.3em;
     padding-bottom: 0.3em;
     /* height: 1.5em; */
+    font-size: 1em;
 }
 
 
@@ -281,7 +281,11 @@ button .btn-inner-text {
 
 button {
     cursor: pointer;
-    font-size: 1em;
+    appearance: button!important;
+    -webkit-appearance: button!important;
+    -moz-appearance: button!important;
+    -ms-appearance: button!important;
+    /* font-size: 1em; */
 }
 
 #headerOverlay {
